nullaway_error_2716B75F-CF9A-47EA-9087-A0342473C41A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/hibernate5/HibernateJdbcException.java:45: error: [NullAway] dereferenced expression ((JDBCException) getCause()) is @Nullable
		return ((JDBCException) getCause()).getSQLException();
		                                   ^
    (see http://t.uber.com/nullaway )
